# AI

./: .gitignore
gemini20-all/: .env  ToolHandler.py  audioTranscribe.py  chromavectordb.py  client_config.py  decorators.py  embeddingfunctions.py  gemini_all_architecture.drawio  index.html  main.py  requirements.txt  script.js  style.css  tools.py  util.py
gemini20-all/storage/: chroma.sqlite3
gemini20-canvas/: main.py
gemini20-rag/: main.py
gemini20-rag/storage/: default__vector_store.json  docstore.json
gemini20-realtime/: main.py
gemini20-realtime-chat/: main.py  main2.py  runServer.sh
gemini20-realtime-function/: index.html  main.py  runServer.sh  script.js  style.css
gemini20-voicetext/: index.html
mine/: list_models.py  pyproject.toml
mine/gemini20-all/: .env  .gitignore  ToolHandler.py  Tools.py  audioTranscribe.py  chromavectordb.py  chromavectordb_testing.py  client_config.py  embeddingfunctions.py  list_models.py  main.py  pyproject.toml  requirements.txt  script.js  style.css  util.py
mine/gemini20-all/storage/: chroma.sqlite3
mine/gemini20-rag/: main.py
mine/gemini20-rag/storage/: index_store.json
mine/gemini20-realtime-chat/: index.html
mine/gemini20-realtime-function/: main.py
mine/gemini20-screen/: main.py
mine/gemini20-voicetext/: main.py
mine/hf-model-imdb-complete-sentence/: README.md  inference_model.py  train_model.py
mine/hf-model-imdb-complete-sentence/clients/: curl_client.py  flask_server_model.py  gradio_app_client.py
mine/storage/: chroma.sqlite3
udemy/llm_basics_udemy/week1/: day2.ipynb
(+5 files in other folders)
